k8/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: chatapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend

    spec:
      containers:
        - name: chatapp-frontend
          image: fazi12/chatapp-frontend:latest

          ports:
            - containerPort: 80
