k8/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chatapp
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
