k8/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: chatapp
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
